manifests/env/phobos/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    cert-manager.io/common-name: paddock.b4mad.racing
  name: paddock.b4mad.racing
spec:
  ingressClassName: openshift-default
  rules:
    - host: paddock.b4mad.racing
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: paddock
                port:
                  name: django-web
  tls:
    - hosts:
        - paddock.b4mad.racing
      secretName: paddock.b4mad.racing
